--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,29 +30,31 @@ layout: default
         {% endif %}
     </div>
 
-    {% if page.prevPart != nil or page.nextPart != nil %}
-        <div class="post__navigator">
-            <div
-                class="post__navigator__buttons"
-                {% if page.prevPart == nil %}
-                    style="justify-content: flex-end;"
-                {% endif %}
-            >
-                {% if page.prevPart != nil %}
-                    <a href="{% link {{ page.prevPart }} %}">
-                        <img  class="arrow-left" src="{{ site.url }}/assets/img/icons/arrow_left.svg"/>
-                        Previous
-                    </a>
-                {% endif %}
-                {% if page.nextPart != nil %}
-                    <a href="{% link {{ page.nextPart }} %}">
-                        Next
-                        <img class="arrow-right" src="{{ site.url }}/assets/img/icons/arrow_right.svg"/>
-                    </a>
-                {% endif %}
-            </div>
-        </div>
-    {% endif %}
+{% raw %}
+	{% if page.prevPart != nil or page.nextPart != nil %}
+	    <div class="post__navigator">
+		<div class="post__navigator__buttons"
+		    {% if page.prevPart == nil %}
+		        style="justify-content: flex-end;"
+		    {% endif %}
+		>
+		    {% if page.prevPart != nil %}
+		        <a href="{{ site.baseurl }}{{ page.prevPart }}">
+		            <img class="arrow-left" src="{{ site.url }}/assets/img/icons/arrow_left.svg"/>
+		            Previous
+		        </a>
+		    {% endif %}
+		    {% if page.nextPart != nil %}
+		        <a href="{{ site.baseurl }}{{ page.nextPart }}">
+		            Next
+		            <img class="arrow-right" src="{{ site.url }}/assets/img/icons/arrow_right.svg"/>
+		        </a>
+		    {% endif %}
+		</div>
+	    </div>
+	{% endif %}
+{% endraw %}
+
 
     <div class="post__content">
         {{ content }}
