--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,15 +39,13 @@ layout: default
                 {% endif %}
             >
                 {% if page.prevPart != nil %}
-                	{% assign post_path = page.prevPart %}
-                    <a href="{% link {{ post_path }} %}">
+                    <a href="{% link _posts/2021-06-16-syntax-example.md %}">
                         <img  class="arrow-left" src="{{ site.url }}/assets/img/icons/arrow_left.svg"/>
                         Previous
                     </a>
                 {% endif %}
                 {% if page.nextPart != nil %}
-                	{% assign post_path = page.nextPart %}
-                    <a href="{% link {{ post_path }} %}">
+                    <a href="{% link _posts/2021-06-16-syntax-example.md %}">
                         Next
                         <img class="arrow-right" src="{{ site.url }}/assets/img/icons/arrow_right.svg"/>
                     </a>
