--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,35 +33,32 @@ layout: default
     {% if page.prevPart != nil or page.nextPart != nil %}
         <div class="post-navigation">
 	    {% assign posts = site.posts %}
-	    {% for post in posts %}
-		{% if post.url == page.url %}
-		    {% assign previous_index = forloop.index0 | minus: 1 %}
-		    {% assign next_index = forloop.index %}
-		    
-		    {% if previous_index >= 0 %}
-		        {% assign previous = posts[previous_index] %}
-		    {% endif %}
-		    
-		    {% if next_index < posts.size %}
-		        {% assign next = posts[next_index] %}
-		    {% endif %}
-		{% endif %}
-	    {% endfor %}
-
-	    {% if previous %}
-		<a href="{{ previous.url | relative_url }}">
-		    <img class="arrow-left" src="{{ site.url }}/assets/img/icons/arrow_left.svg" />
-		    Previous
-		</a>
+	    {% assign current_index = posts | index: page %}
+	    
+	    {% if current_index > 0 %}
+		{% assign previous = posts[current_index | minus: 1] %}
 	    {% endif %}
 	    
-	    {% if next %}
-		<a href="{{ next.url | relative_url }}">
-		    Next
-		    <img class="arrow-right" src="{{ site.url }}/assets/img/icons/arrow_right.svg" />
-		</a>
-    {% endif %}
-</div>
+	    {% if current_index < posts.size | minus: 1 %}
+		{% assign next = posts[current_index | plus: 1] %}
+	    {% endif %}
+
+	    <div class="post-navigation-links">
+		{% if previous %}
+		    <a href="{{ previous.url | relative_url }}">
+		        <img class="arrow-left" src="{{ site.url }}/assets/img/icons/arrow_left.svg" />
+		        Previous
+		    </a>
+		{% endif %}
+		
+		{% if next %}
+		    <a href="{{ next.url | relative_url }}">
+		        Next
+		        <img class="arrow-right" src="{{ site.url }}/assets/img/icons/arrow_right.svg" />
+		    </a>
+		{% endif %}
+	    </div>
+	</div>
 
     {% endif %}
 
